--- a/GestionProjet/GestionProjet.csproj
+++ b/GestionProjet/GestionProjet.csproj
@@ -96,6 +96,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="ZstdSharp, Version=0.8.6.0, Culture=neutral, PublicKeyToken=8d151af33a4ad5cf, processorArchitecture=MSIL">
       <HintPath>..\packages\ZstdSharp.Port.0.8.6\lib\net462\ZstdSharp.dll</HintPath>
     </Reference>
@@ -106,12 +107,22 @@
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\UtilisateurController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Controllers\ProjetController.cs" />
+    <Compile Include="Controllers\KanbanController.cs" />
     <Compile Include="Data\DatabaseContext.cs" />
     <Compile Include="Models\Utilisateur.cs" />
+    <Compile Include="Models\Projet.cs" />
+    <Compile Include="Models\Statut.cs" />
+    <Compile Include="Models\Priorite.cs" />
+    <Compile Include="Models\Tache.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IUtilisateurRepository.cs" />
     <Compile Include="Repositories\UtilisateurRepository.cs" />
+    <Compile Include="Repositories\ITacheRepository.cs" />
+    <Compile Include="Repositories\TacheRepository.cs" />
+    <Compile Include="Repositories\IProjetRepository.cs" />
+    <Compile Include="Repositories\ProjetRepository.cs" />
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Views\LoginForm.cs">
       <SubType>Form</SubType>
@@ -136,6 +147,18 @@
     </Compile>
     <Compile Include="Views\RegisterForm.Designer.cs">
       <DependentUpon>RegisterForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ProjetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ProjetForm.Designer.cs">
+      <DependentUpon>ProjetForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\KanbanForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\KanbanForm.Designer.cs">
+      <DependentUpon>KanbanForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
