--- a/GestionProjet/GestionProjet.csproj
+++ b/GestionProjet/GestionProjet.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Views\KanbanForm.Designer.cs">
       <DependentUpon>KanbanForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\DashboardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DashboardForm.Designer.cs">
+      <DependentUpon>DashboardForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
